# digeiz_technical

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  license_header.in  pyproject.toml  requirements.txt  setup.py  tox.ini
app/: __init__.py  account.py  app.py  create_table.py  mall.py  unit.py
app/models/: __init__.py  account.py  mall.py  unit.py
app/resources/: __init__.py  account.py  mall.py  unit.py
digeiz_api/: app.py
test/: __init__.py  create_table_test.py  db.py  test_client.py
test/models/: __init__.py  account.py
test/resources/: __init__.py  account.py
