[tool.poetry]
name = "digeiz_api"
version = "0.1.0"
description = "digeiz's technical test"
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
